# shopify-monitor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE-MIT  README.md  config.array.json  config.json  config.object.json  config.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
src/: alternative.rs  config.rs  log.rs  main.rs  message.rs  monitor.rs  products.rs  stores.rs  webhook.rs
src/tests/: available_product.rs  color.rs  mod.rs
