[package]
name = "shopify-monitor"
version = "0.1.1"
edition = "2018"
description = ""
repository = "https://github.com/subreme/shopify-monitor"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies]
base64 = "0.13.0"
chrono = "0.4"
colored = "2"
futures = "0.3.16"
serde_json = "1.0"
